ac1dsworld/prometheus/16.7.0/CHANGELOG.md
---
title: Changelog
---


*for the complete changelog, please refer to the website*

**Important:**




























## [prometheus-16.4.9](https://github.com/truecharts/charts/compare/prometheus-16.4.8...prometheus-16.4.9) (2024-02-12)

### Chore



- update container image bitnami/prometheus to 2.49.1[@bfc292a](https://github.com/bfc292a) by renovate ([#18223](https://github.com/truecharts/charts/issues/18223))


## [prometheus-16.4.8](https://github.com/truecharts/charts/compare/prometheus-16.4.7...prometheus-16.4.8) (2024-02-12)

### Chore



- update container image bitnami/alertmanager to 0.26.0[@537c5f5](https://github.com/537c5f5) by renovate ([#18200](https://github.com/truecharts/charts/issues/18200))

- update container image bitnami/prometheus to 2.49.1[@c382eae](https://github.com/c382eae) by renovate ([#18032](https://github.com/truecharts/charts/issues/18032))


## [prometheus-16.4.7](https://github.com/truecharts/charts/compare/prometheus-16.4.6...prometheus-16.4.7) (2024-02-12)

### Chore



- update container image bitnami/alertmanager to 0.26.0[@130b6ff](https://github.com/130b6ff) by renovate ([#18154](https://github.com/truecharts/charts/issues/18154))


## [prometheus-16.4.6](https://github.com/truecharts/charts/compare/prometheus-16.4.5...prometheus-16.4.6) (2024-02-12)

### Chore



- update container image bitnami/alertmanager to 0.26.0[@de8bbbd](https://github.com/de8bbbd) by renovate ([#18026](https://github.com/truecharts/charts/issues/18026))


## [prometheus-16.4.5](https://github.com/truecharts/charts/compare/prometheus-16.4.4...prometheus-16.4.5) (2024-02-05)

### Chore



- update container image bitnami/alertmanager to 0.26.0[@d58f3c7](https://github.com/d58f3c7) by renovate ([#17812](https://github.com/truecharts/charts/issues/17812))


## [prometheus-16.4.4](https://github.com/truecharts/charts/compare/prometheus-16.4.3...prometheus-16.4.4) (2024-02-04)


## [prometheus-16.4.3](https://github.com/truecharts/charts/compare/prometheus-16.4.2...prometheus-16.4.3) (2024-02-03)

### Chore



- update container image common to v17.2.30[@19ad5ec](https://github.com/19ad5ec) by renovate ([#17804](https://github.com/truecharts/charts/issues/17804))


## [prometheus-16.4.2](https://github.com/truecharts/charts/compare/prometheus-16.4.1...prometheus-16.4.2) (2024-02-03)

### Chore

