ac1dsworld/prometheus/17.6.2/CHANGELOG.md
---
title: Changelog
---


*for the complete changelog, please refer to the website*

**Important:**


## [prometheus-17.6.2](https://github.com/truecharts/charts/compare/prometheus-17.6.0...prometheus-17.6.2) (2024-03-05)

### Chore



- force rereleases

- update container image common to v18.1.6[@904d84b](https://github.com/904d84b) by renovate ([#18835](https://github.com/truecharts/charts/issues/18835))

- update container image kube-prometheus-stack to v56.21.0[@fb857f3](https://github.com/fb857f3) by renovate ([#18875](https://github.com/truecharts/charts/issues/18875))












































## [prometheus-16.4.9](https://github.com/truecharts/charts/compare/prometheus-16.4.8...prometheus-16.4.9) (2024-02-12)

### Chore



- update container image bitnami/prometheus to 2.49.1[@bfc292a](https://github.com/bfc292a) by renovate ([#18223](https://github.com/truecharts/charts/issues/18223))


## [prometheus-16.4.8](https://github.com/truecharts/charts/compare/prometheus-16.4.7...prometheus-16.4.8) (2024-02-12)

### Chore



- update container image bitnami/alertmanager to 0.26.0[@537c5f5](https://github.com/537c5f5) by renovate ([#18200](https://github.com/truecharts/charts/issues/18200))

- update container image bitnami/prometheus to 2.49.1[@c382eae](https://github.com/c382eae) by renovate ([#18032](https://github.com/truecharts/charts/issues/18032))


## [prometheus-16.4.7](https://github.com/truecharts/charts/compare/prometheus-16.4.6...prometheus-16.4.7) (2024-02-12)

### Chore



- update container image bitnami/alertmanager to 0.26.0[@130b6ff](https://github.com/130b6ff) by renovate ([#18154](https://github.com/truecharts/charts/issues/18154))


## [prometheus-16.4.6](https://github.com/truecharts/charts/compare/prometheus-16.4.5...prometheus-16.4.6) (2024-02-12)

### Chore


